# anodyse

./: .coverage  .gitignore  FEATURE_003_IMPLEMENTATION_COMPLETE.md  README.md  pyproject.toml
.github/agents/: copilot-instructions.md
.github/workflows/: ci.yml  docs-on-pr.yml  docs-on-push.yml  docs-schedule.yml
.specify/memory/: constitution.md
anodyse/: __init__.py  cli.py  discovery.py  exceptions.py  extractor.py  models.py  output.py  parser.py  renderer.py  utils.py
anodyse.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
anodyse/templates/: index.md.j2  playbook.md.j2  (+1 more)
docs/: ANODYSE_CI_DOGFOOD.md  CI_EXAMPLES_CONTRIBUTING.md  CI_GLOSSARY.md  CI_INTEGRATION.md  CI_INTEGRATION_INDEX.md  CI_PLATFORM_SUPPORT.md  CI_TESTING_VALIDATION_REPORT.md  CONFIGURATION_REFERENCE.md  ENVIRONMENT_VARIABLES.md  GENERIC_CI_INTEGRATION.md  PLATFORM_COMPARISON.md  PUBLISHING.md  SETUP_CHECKLISTS.md  TROUBLESHOOTING.md
samples/: README-DOCS.md  README.md  application-configuration-management.md  application-server-deployment.md  docker-application-deployment.md  enterprise-application-stack-orchestrator.md  index.md  index.md.bak  multi-tier-application-stack-deployment.md  nginx-load-balancer-configuration.md  nginx-web-server-deployment.md  postgresql-cluster-deployment.md  postgresql-database-server-deployment.md  prometheus-monitoring-server-setup.md  system-security-hardening.md
tests/: __init__.py  test_cli.py  test_discovery.py  test_extractor.py  test_integration.py  test_output.py  test_parser.py  test_renderer.py  test_utils.py
(+106 files in other folders)
